--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -1,129 +1,123 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "layout.html" %}
+
+{% set pageId = "page-create-point" %}
+{% block title %}
     <title>Criar um ponto de coleta</title>
+{% endblock title %}
 
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    
-
-    <link rel="stylesheet" href="/styles/main.css">
+{% block styles %}
     <link rel="stylesheet" href="/styles/create-point.css">
+{% endblock styles %}
 
-    <link rel="stylesheet" href="/styles/responsive.css">
+{% block content %}
+    {% include "partials/page-header.html" %}
 
-</head>
-<body>
+    <form action="">
 
-    <div id="page-create-point">
-        
-            <header>
-                <img src="/assets/logo.svg" alt="Logomarca">
-                <a href="/">
-                    <span></span>
-                    Voltar para home
-                </a>
-            </header>  
-            
-            <form action="">
+        <h1>Cadastro do ponto de coleta</h1>
 
-                <h1>Cadastro do ponto de coleta</h1>
+        <fieldset>
+            <legend>
+                <h2>Dados da entidade</h2>
+            </legend>
 
-                <fieldset>
-                    <legend>
-                        <h2>Dados da entidade</h2>
-                    </legend>
+            <div class="field-group">
+                <div class="field">
+                    <label for="name">Nome da entidade</label>
+                    <input type="text" name="name" required="required">
+                </div>
+                <div class="field">
+                    <label for="name">Imagem da entidade</label>
+                    <input 
+                        type="url" 
+                        name="image" 
+                        placeholder="http://"
+                        required="required">
+                </div>
+            </div>
 
-                    <div class="field">
-                        <label for="name">Nome da entidade</label>
-                        <input type="text" name="name" required>
-                    </div>
+            <div class="field-group">
+                <div class="field">
+                    <label for="address">Endereço</label>
+                    <input type="text" name="address" required="required">
+                </div>
+                <div class="field">
+                    <label for="address2">Número/Complemento</label>
+                    <input type="text" name="address2" required="required">
+                </div>
+            </div>
 
-                    <div class="field-group">
-                        <div class="field">
-                            <label for="address">Endereço</label>
-                            <input type="text" name="address" required>
-                        </div>
-                        <div class="field">
-                            <label for="address2">Número/Complemento</label>
-                            <input type="text" name="address2" required>
-                        </div>
-                    </div>
-                    
-                    <div class="field-group">
-                        <div class="field">
-                            <label for="state">Estado</label>
-                            <select name="uf" required>
-                                <option value="">Selecione o Estado</option>
-                                <option value="1">Opção o Estado</option>
-                            </select>   
+            <div class="field-group">
+                <div class="field">
+                    <label for="state">Estado</label>
+                    <select name="uf" required="required">
+                        <option value="">Selecione o Estado</option>
+                        <option value="1">Opção o Estado</option>
+                    </select>
 
-                            <input type="hidden" name="state">
+                    <input type="hidden" name="state">
 
-                        </div>
-                        
-                        <div class="field">
-                            <label for="city">Cidade</label>
-                            <select name="city" disabled required>
-                                <option value="">Selecione a Cidade</option>
-                            </select>
-                        </div>
+                </div>
 
-                    </div>
+                <div class="field">
+                    <label for="city">Cidade</label>
+                    <select name="city" disabled="disabled" required="required">
+                        <option value="">Selecione a Cidade</option>
+                    </select>
+                </div>
 
-                    
+            </div>
 
-                </fieldset>
+        </fieldset>
 
-                <fieldset>
-                    <legend>
-                        <h2>Itens de coleta</h2>
-                    </legend>
+        <fieldset>
+            <legend>
+                <h2>Itens de coleta</h2>
+                <span>Selecione um ou mais itens abaixo</span>
+            </legend>
 
-                    <div class="items-grid">
-                        <li data-id="1">
-                            <img src="/assets/lampadas.svg" alt="Lâmpadas">
-                            <span>Lâmpadas</span>
-                        </li>
-                        
-                        <li data-id="2">
-                            <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
-                            <span>Pilhas e Baterias</span>
-                        </li>
-                        
-                        <li data-id="3">
-                            <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
-                            <span>Papéis e Papelão</span>
-                        </li>
-                        
-                        <li data-id="4">
-                            <img src="/assets/eletronicos.svg" alt="Resíduos Eletrônicos">
-                            <span>Resíduos Eletrônicos</span>
-                        </li>
-                        
-                        <li data-id="5">
-                            <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
-                            <span>Resíduos Orgânicos</span>
-                        </li>
-                        
-                        <li data-id="6">
-                            <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
-                            <span>Óleo de Cozinha</span>
-                        </li>
-                    </div>
+            <div class="items-grid">
+                <li data-id="1">
+                    <img src="/assets/lampadas.svg" alt="Lâmpadas">
+                    <span>Lâmpadas</span>
+                </li>
 
-                    <input type="hidden" name="items">
+                <li data-id="2">
+                    <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
+                    <span>Pilhas e Baterias</span>
+                </li>
 
-                </fieldset>
+                <li data-id="3">
+                    <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
+                    <span>Papéis e Papelão</span>
+                </li>
 
-                <button type="submit">Cadastrar ponto de coleta</button>
+                <li data-id="4">
+                    <img src="/assets/eletronicos.svg" alt="Resíduos Eletrônicos">
+                    <span>Resíduos Eletrônicos</span>
+                </li>
 
-            </form>
+                <li data-id="5">
+                    <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
+                    <span>Resíduos Orgânicos</span>
+                </li>
 
-    </div>
+                <li data-id="6">
+                    <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
+                    <span>Óleo de Cozinha</span>
+                </li>
+            </div>
 
+            <input type="hidden" name="items">
+
+        </fieldset>
+
+        <button type="submit">Cadastrar ponto de coleta</button>
+
+    </form>
+
+{% endblock content %}
+
+{% block scripts %}
     <script src="/scripts/create-point.js"></script>
-
-</body>
+{% endblock scripts %}
