--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecoleta</title>
+{% extends "layout.html" %}
+
+{% set pageId = "page-home" %}
 
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    
-
-    <link rel="stylesheet" href="/styles/main.css">
+{% block styles %}
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="stylesheet" href="/styles/modal.css">
-        
-    <link rel="stylesheet" href="/styles/responsive.css">
+{% endblock styles %}
 
-</head>
-<body>
-
-
-
-    <div id="page-home">
-
+    {% block content %}
         <div class="content">
             <header>
                 <img src="/assets/logo.svg" alt="Logomarca">
@@ -40,31 +27,12 @@
 
             </main>            
         </div>
-
-    </div>
-
+    {% endblock content %}
     
-    <div id="modal" class="hide">
-        <div class="content">
-            <div class="header">
-                <h1>Pontos de Coleta</h1>
-                <a href="#">Fechar"></a>
-            </div>
-            <form action="/search-results.html">
-                <label for="search">Cidade</label>
-                <div class="search field">
-                    <input 
-                    type="text" 
-                    name="search"
-                    placeholder="Pesquise por cidade">
-                    <button>
-                        <img src="/assets/search.svg" alt="Buscar">
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-    
+{% block modal %}
+    {%  include "partials/modal.html" %}
+{% endblock modal %}
+
+{% block scripts %}
     <script src="/scripts/index.js"></script>
-</body>
-</html>
+{% endblock scripts %}
